# GemmEfficiency

./: CMakeLists.txt  Makefile  README.md  build_demo.sh  demo.c  gemm1.c  gemm11.c  gemm12.c  gemm3.c  gemm4.c  gemm4.s  gemm5.c  make.sh  mysgemm.cpp  nested.cpp  run.sh  run_bdw.sh  run_knl.sh  run_knm.sh  run_skx.sh  test.c  test_omp.cpp  test_tbb.cpp  verbose_run.sh  vtune.sh
sgemm_peek/: gemm.sh  run_gemm.sh
